add search by key feature

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /packages
 /_build
 /CABNodeExplorer/*.user
+/.vs/CABNodeExplorer/v14/.suo
+/ipch/CABNODEEXPLORER-ad446b31/CABNODEEXPLORER-faf434bc.ipch
+/CABNodeExplorer.VC.db
+/CABNodeExplorer.VC.VC.opendb
