--- a/CABNodeExplorer/CABNodeExplorer.vcxproj
+++ b/CABNodeExplorer/CABNodeExplorer.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="ToolBarCombo.h" />
+    <ClInclude Include="ToolBarFind.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AboutDlg.cpp" />
@@ -195,6 +196,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ToolBarCombo.cpp" />
+    <ClCompile Include="ToolBarFind.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CABNodeExplorer.rc" />
@@ -203,6 +205,7 @@
     <Image Include="res\CABNodeExplorer.ico" />
     <Image Include="res\toolbar.bmp" />
     <Image Include="res\toolbar1.bmp" />
+    <Image Include="res\toolbar2.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
